tests/machine/x/go/group_by_multi_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_multi_join.go:15:15: undefined: Nation
../../../tests/machine/x/go/group_by_multi_join.go:18:5: undefined: Nation
../../../tests/machine/x/go/group_by_multi_join.go:22:17: undefined: Supplier
../../../tests/machine/x/go/group_by_multi_join.go:25:5: undefined: Supplier
../../../tests/machine/x/go/group_by_multi_join.go:29:16: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:34:5: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:39:5: undefined: Partsupp
../../../tests/machine/x/go/group_by_multi_join.go:45:23: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:46:16: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:58:34: undefined: Filtered
../../../tests/machine/x/go/group_by_multi_join.go:58:34: too many errors

1: //go:build ignore
